Assignment_16/classwork/classifier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: classifier-ingress
spec:
    rules:
        - host: classifier.localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: classifier-service
                            port:
                                number: 80
